Bug 464775: Fix for findbugs warnings (round 4)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
Reviewed-by: MartiNG